change the table class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table class="table" style="display:none;">
+    <table class="creatExcelTable" style="display:none;">
         <tbody>
            <tr></tr>
         </tbody>
