--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <table class="creatExcelTable" style="display:none;">
+    <table id="creatExcelTable">
         <tbody>
-           <tr></tr>
+          <tr></tr>
         </tbody>
-    </table>
+      </table>
+    </div>
     <button class="excel">excell</button>
-    <script  src="http://code.jquery.com/jquery-3.3.1.min.js"  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="  crossorigin="anonymous"></script>
     <script src="./script/script.js"></script>
 </body>
 </html>
